tests/errors/continue_compilation_2.f90
module Geometry
    implicit none

    type :: Circle
        real :: radius
contains
    procedure :: calculateArea
    end type Circle

contains

    ! Type-bound subroutine to calculate the area of a circle
    subroutine calculateArea(self, area)
       class(Circle), intent(in) :: self
       real, intent(out) :: area
       area = 3.14 * self%radius**2
    end subroutine calculateArea
end module Geometry

program continue_compilation_2
    use iso_c_binding, only: c_ptr, c_f_pointer
    use Geometry
    implicit none


    ! Variable declarations
    type(c_ptr) :: queries_1
    integer, pointer :: y_1
    type(c_ptr) :: queries_2
    integer(2), pointer :: y_2(:)
    integer :: shape(2, 2)
    integer, parameter :: x = 2
    type(Circle) :: myCircle
    real :: circleArea
    complex :: a
    integer :: val
    character(1) :: x_2
    integer :: i


    ! c_f_pointer_01
    call c_f_pointer(queries_1, y_1, [2])
    print *, "First error skipped"


    ! c_f_pointer_02
    call c_f_pointer(queries_2, y_2, shape)
    print *, "Second error skipped"


    ! assign_01
    x = 1
    print *, x
    print *, "Third error skipped"


    ! class_procedure_extra_args
    myCircle%radius = 5.0
    call myCircle%calculateArea(circleArea, 12)
    print *, "Fourth error skipped"


    ! close_invalid_kwarg1
    CLOSE(end=200)
    print *, "Fifth error skipped"


    ! cmplx_01
    a = cmplx(y = 2)
    print *, a
    print *, "Sixth error skipped"


    ! cmplx_02
    print*, cmplx((real(1, kind=4), 0.00000000), kind=8)
    print *, "Seventh error skipped"


    ! cmplx_03
    print*, cmplx((1.00000000, real(0, kind=4)), kind=8)
    print *, "Eighth error skipped"


    ! coarray_01
    val = this_image ()
    call co_sum (val, result_image=1)
    if (this_image() == 1) then
      write(*,*) "The sum is ", val ! prints (n**2 + n)/2,
                                    ! with n = num_images()
    end if
    print *, "Nine error skipped"


    ! coarray_02
    call event_query(1, 1, 1)
    print *, "Tenth error skipped"


    ! compare_01
    x_2 = 'u'
    i = 10
    if (i > x_2) then
        print *, "Hello World"
    else
        print *, "New world"
    end if
    print *, "Eleventh error skipped"


end program